# supportsage

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
blog/: benchmark-results.md  distribution_links.md  gui-cura-announce.md  reddit_final.md  reddit_post.md  supportsage-intro.md  tree-support-algorithm.md  webdemo-announce.md
cura_plugin/: README.md  SupportSagePlugin.py  __init__.py  install.sh  plugin.json
gui_static/: index.html
scripts/: install_3d_tools.sh
supportsage/: analyzer.py  cli.py  gui_server.py  optimizer.py  tree_supports.py
supportsage/webdemo/: index.html
tests/: benchmark_results.json  generate_benchmarks.py  run_benchmark.py  test_analyzer.py
tests/fixtures/: bridge_test.stl  multi_island_test.stl  roof_test.stl
webdemo/: README.md  index.html
